# B-Problem-solving-in-CPP--Mostafa-saad-sheet-

./: A.AntonAndDanik.cpp  A.BearandBigBrother.cpp  A.BeautifulMatrix.cpp  A.BlackSquare.cpp  A.BoyOrGirl.cpp  A.BuyaShovel.cpp  A.ColorfulStones.cpp  A.Games.cpp  A.GravityFlip.cpp  A.Magnets.cpp  A.NightAtTheMuseum.cpp  A.PetyaAndStrings.cpp  A.PoliceRecruits.cpp  A.SerejAndDima.cpp  A.StonesOnTheTable.cpp  A.VanyaAndFence.cpp  A.Word.cpp  CMakeLists.txt  D.Xor.cpp  E.HadyRidestheTrain.cpp  Mosatafa sadd.xlsx  T.CircleTask.cpp
