cmake_minimum_required(VERSION 3.23)
project(Mostafa_saad_s_sheet)

set(CMAKE_CXX_STANDARD 14)

add_executable(Mostafa_saad_s_sheet main.cpp)
add_executable(A.VanyaAndFence A.VanyaAndFence.cpp)
add_executable(A.AntonandDanik A.AntonandDanik.cpp)
add_executable(A.BearandBigBrother A.BearandBigBrother.cpp)
add_executable(A.BeautifulMatrix A.BeautifulMatrix.cpp)
add_executable(A.GravityFlip A.GravityFlip.cpp)
add_executable(E.HadyRidestheTrain E.HadyRidestheTrain.cpp)
add_executable(A.PetyaAndStrings A.PetyaAndStrings.cpp)
add_executable(A.BoyOrGirl A.BoyOrGirl.cpp)
add_executable(A.Word A.Word.cpp)
add_executable(A.Magnets A.Magnets.cpp)
add_executable(A.SerejAndDima A.SerejAndDima.cpp)
add_executable(A.StonesOnTheTable A.StonesOnTheTable.cpp)
add_executable(A.PoliceRecruits A.PoliceRecruits.cpp)
add_executable(A.BlackSquare A.BlackSquare.cpp)
add_executable(A.NightAtTheMuseum A.NightAtTheMuseum.cpp)
add_executable(A.Games A.Games.cpp)
add_executable(D.Xor D.Xor.cpp)
add_executable(T.CircleTask T.CircleTask.cpp)
add_executable(A.BuyaShovel A.BuyaShovel.cpp)
add_executable(A.ColorfulStones A.ColorfulStones.cpp)
add_executable(H.GCD H.GCD.cpp)
